src/tests/variable-declarations/14.txt
variable-declarations/14.c:2:16: error: incompatible types when initializing type 'float' using type 'char *'
     float a = {"a"};
                ^
